// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputForm renders back button 1`] = `
<div
  className="modal"
>
  <div
    className="backtab-position"
  >
    <button
      className="back-tab"
    >
      <img
        className="icon"
        src="test-file-stub"
      />
    </button>
  </div>
  <div
    className="modal-content"
  >
    <span
      className="top-bar"
    />
    <div
      className="modal-children"
    />
  </div>
</div>
`;

exports[`InputForm renders correctly 1`] = `
<div
  className="modal"
>
  <div
    className="modal-content"
  >
    <span
      className="top-bar"
    />
    <div
      className="modal-children"
    />
  </div>
</div>
`;
